--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.10.5",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.1",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
